--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body": "^5.1.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongod": "^2.0.0",
     "mongoose": "^5.6.9",
     "parser": "^0.1.4",
     "react": "^16.9.0",
